--- a/About Me.html
+++ b/About Me.html
@@ -11,7 +11,7 @@
                 I previously attended Polythecnic College of La Union in Agoo, La Union, where I studied Bachelor of Science in Criminology. <br></p>
         </section>
         <section>
-            <img src="me.jpg.jpg" alt="ako na cute siklista" style="width: 20%;">
+            <img src="ako.jpg.jpg" alt="ako na cute" style="width: 20%;">
         </section>
         <footer>
             <a href="https://web.facebook.com/Kuroro.Senpa1/"> Facebook Account</a>
